	 ZX (etc) printer.
20031010 fuse.c: On Solaris, uname() returns 1 to indicate success.
20031011 machine.c, utils.c: when looking for ROMs or library files, look
	 in the roms/ or lib/ directory off where the Fuse executable is,
	 not off the current directory.
20031011 Remove the now unused getopt/ directory.
20031012 rzx.c: reset rzx_competition_mode when starting a non-competition
	 mode recording.
20031013 fuse.c: check libspectrum's version at startup.
20031013 fuse.c: add libspectrum version to the creator custom data.
20031013 fuse.c, rzx.c: put gcrypt version into creator custom data. Give
	 warning if a competition mode recording is started, but gcrypt is
	 not available.
20031014 configure.in: no longer need to explicitly link against zlib
20031014 configure.in, trdos.c: we need <strings.h> for strncasecmp on
	 QNX6 (thanks, Mike Gorchak).
20031015 ui/gtk/statusbar.c: the statusbar should not expand to fill the
	 space available.
20031016 compat/Makefile.am: distribute getopt.h.
20031016 event.c, debugger/debugger.h: must explicitly include glib.h as
	 it is no longer pulled in by libspectrum.
20031020 fuse.c, trdos.c, utils.c: use libspectrum_identify_file_with_class
	 where appropriate.
20031020 utils.c: use TMPDIR before /tmp for temporary files.
20031023 Add simple 'poke finder'.
20031023 fuse.c, osssound.c: more useful error messages if we couldn't
	 initialise the OSS sound code.
20031025 ui/gtk/pokefinder.c: UI improvements.
20031025 ui/gtk/pokefinder.c: keyboard shortcuts
20031026 ui/gtk/debugger.c, ui/gtk/pokefinder.c: correct behaviour if the
	 window receives a delete event.
20031026 pokefinder/pokefinder.c: ensure we get a prototype for memset.
20031027 ui/gtk/gtkui.c: add confirmation dialog if the main window
	 receives a delete-event.
20031027 ui/gtk: "delete-event" is spelt "delete-event", not
	 "delete_event".
20031027 widget/widget.c: Win32 timing routines (Marek).
20031028 Generalise the timer routines (see hacking/timer.txt).