@@ -302,3 +302,6 @@
 	 "delete_event".
 20031027 widget/widget.c: Win32 timing routines (Marek).
 20031028 Generalise the timer routines (see hacking/timer.txt).
+20031029 fuse.[ch], machine.c, utils.c: when looking for ROM/library
+	 files, look relative to the directory Fuse started in, not the
+	 current directory.
